@@ -1,3 +1,8 @@
+2007-04-15  Armin Burgmeier  <armin@0x539.de>
+
+	* src/zeroconf_avahi.cpp: Don't prefix error message in throw() when
+	discovering failed. The error handler may still do this.
+
 2007-04-15  Philipp Kern <phil@0x539.de>
 
 	* src/zeroconf_avahi.cpp: remove debug output on stdout and stderr
